--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     
-    <header>
-        <a href="#">
+    <header class="header">
+        <a href="#" class="header-logo">
             <img src="img/brafe.png" alt="brafer">
         </a>
 
-        <nav>
+        <nav class="header-menu">
             <ul>
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Produtos</a></li>
@@ -24,24 +24,25 @@
         </nav>
     </header>
 
-    <main>
-        <nav>
+    <main class="main-container">
+        <nav class="side-nav">
             <ul>
-                <li><a href="#">Contabilidade</a></li>
-                <li><a href="#">Paginas</a></li>
-                <li><a href="#">Plugins</a></li>
-                <li><a href="#">Formulários</a></li>
-                <li><a href="#">Hospedagens</a></li>
+                <li><a class="nav-contabilidade" href="#">Contabilidade</a></li>
+                <li><a class="nav-produtos" href="#">Produtos</a></li>
+                <li><a class="nav-paginas" href="#">Páginas</a></li>
+                <li><a class="nav-plugins" href="#">Plugins</a></li>
+                <li><a class="nav-formulários" href="#">Formulários</a></li>
+                <li><a class="nav-hospedagens" href="#">Hospedagens</a></li>
             </ul>
         </nav>
 
-        <section>
+        <section class="produtos">
             <header>
                 <h1>Produtos</h1>
-                <a href="#">Adicionar produtos</a>
+                <a class="add-produtos" href="#">Adicionar produtos</a>
             </header>
             <ul>
-                <li>
+                <li class="produtos-item">
                     <img src="img/cafe-1.jpg" alt="café 1">
                     <ul>
                         <li><span>nome</span> Capuccino</li>
@@ -51,7 +52,7 @@
                     <a href="#">Editar</a>
                 </li>
 
-                <li>
+                <li class="produtos-item">
                     <img src="img/cafe-2.jpg" alt="café 2">
                     <ul>
                         <li><span>nome</span> Capuccino</li>
@@ -61,7 +62,7 @@
                     <a href="#">Editar</a>
                 </li>
 
-                <li>
+                <li class="produtos-item">
                     <img src="img/cafe-3.jpg" alt="café 3">
                     <ul>
                         <li><span>nome</span> Capuccino</li>
@@ -71,7 +72,7 @@
                     <a href="#">Editar</a>
                 </li>
 
-                <li>
+                <li class="produtos-item">
                     <img src="img/cafe-4.jpg" alt="café 4">
                     <ul>
                         <li><span>nome</span> Capuccino</li>
